# chileafcleaning

./: README.md  go.mod  main.go
api/: README.md
goleafdev/: go.mod  main.go
goleafdev/api/: api.md  email.go
goleafdev/api/gmail/: email_script.py
goleafdev/data/: database.go  repository.go
goleafdev/handlers/: pages.go
goleafdev/routes/: routes.go
goleafdev/static/css/: main.css
goleafdev/templates/: index.html
handlers/: formhandlers.go  routehandlers.go
models/: models.go
qblog/: README.md  WORK.md  pyproject.toml
qblog/src/qblog/: __init__.py  blog.db  config.py  schema.sql
qblog/src/qblog/director/: routes.py
qblog/src/qblog/public/: routes.py
qblog/src/qblog/templates/: base.html
qblog/src/qblog/templates/director/: _client_page.html  clients.html  portal.html  tickets.html
qblog/src/qblog/templates/public/: about.html
routes/: routes.go
static/img/: imgcred.txt
templates/: basetemplate.html  contact.html  index.html
utils/: utils.go
